; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_diff_generate.c_git_diff__oid_for_file.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_diff_generate.c_git_diff__oid_for_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i8*, i64, i32 }

@UINT32_MAX = common dso_local global i64 0, align 8
@GIT_ERROR_NOMEMORY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"file size overflow (for 32-bits) on '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_diff__oid_for_file(i32* %0, i32* %1, i8* %2, i32 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca %struct.TYPE_4__, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i64 %4, i64* %11, align 8
  %13 = load i64, i64* %11, align 8
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %5
  %16 = load i64, i64* %11, align 8
  %17 = load i64, i64* @UINT32_MAX, align 8
  %18 = icmp sgt i64 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %15, %5
  %20 = load i32, i32* @GIT_ERROR_NOMEMORY, align 4
  %21 = load i8*, i8** %9, align 8
  %22 = call i32 @git_error_set(i32 %20, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i8* %21)
  store i32 -1, i32* %6, align 4
  br label %35

23:                                               ; preds = %15
  %24 = call i32 @memset(%struct.TYPE_4__* %12, i32 0, i32 24)
  %25 = load i32, i32* %10, align 4
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 2
  store i32 %25, i32* %26, align 8
  %27 = load i64, i64* %11, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 1
  store i64 %27, i64* %28, align 8
  %29 = load i8*, i8** %9, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  store i8* %29, i8** %30, align 8
  %31 = load i32*, i32** %7, align 8
  %32 = load i32*, i32** %8, align 8
  %33 = load i32, i32* %10, align 4
  %34 = call i32 @git_diff__oid_for_entry(i32* %31, i32* %32, %struct.TYPE_4__* %12, i32 %33, i32* null)
  store i32 %34, i32* %6, align 4
  br label %35

35:                                               ; preds = %23, %19
  %36 = load i32, i32* %6, align 4
  ret i32 %36
}

declare dso_local i32 @git_error_set(i32, i8*, i8*) #1

declare dso_local i32 @memset(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @git_diff__oid_for_entry(i32*, i32*, %struct.TYPE_4__*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
